--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,10 +1,11 @@
-@import url('~assets/font/style.css');
+@import url('~/assets/font/style.css');
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'DIN Round Pro', sans-serif;
+  user-select: none;
 }
 
 html {
